<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/iv_data3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/iv_login"
            app:srcCompat="@drawable/data3"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/tv_name"
            android:padding="15dp"
            android:layout_margin="10dp"

            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/tv_name"
            android:padding="15dp"
            android:layout_margin="10dp"

            />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/tv_name"
            android:padding="15dp"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et2_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/phone"
                android:hint="@string/et_phone"
                android:inputType="phone"
                android:padding="16dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/text"
                android:hint="@string/et_text"
                android:inputType="text"
                android:padding="16dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="25sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:padding="15dp"
                android:text="@string/btn_shara"
                android:textColor="@color/white"

                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:padding="15dp"
                android:text="@string/btn_call"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>