<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login"
            android:background="@drawable/iv_login"
            />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv1"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="158dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/et_name"
            android:textAlignment="center"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/et_email"
            android:drawableStart="@drawable/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/et_password"
            android:inputType="numberPassword"
            android:drawableStart="@drawable/lock"
            android:drawableEnd="@drawable/showpassword"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/et_phone"
            android:inputType="phone"
            android:drawableStart="@drawable/phone"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:textSize="25sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:padding="15dp"
                android:text="@string/btn_next"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>